--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,14 @@
     
     <!-- Title -->
     <title>Automate Your Tasks with Bot-It | Time-Saving Automation Solutions</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0W1XDF6G2X"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-0W1XDF6G2X');
+    </script>
 
     <!-- Favicon -->
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
