chage some description

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <!-- Meta Tags for SEO -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover how Bot-It transforms businesses with automation solutions. Learn about our mission, team, and FAQs.">
-    <meta name="keywords" content="About Bot-It, automation solutions, business efficiency, FAQs">
+    <meta name="description" content="Discover how Bot-It transforms tasks with automation solutions. Learn about our mission, team, and FAQs.">
+    <meta name="keywords" content="About Bot-It, automation solutions, business efficiency, Automation tools FAQ, How does Bot-It help with business automation? ">
     <meta name="author" content="Bot-It">
     
     <!-- Title -->
