--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <!-- Meta Tags for SEO -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Bot-It - Transform your digital journey with our expert SEO and web development services.">
-    <meta name="keywords" content="SEO, Web Development, Digital Marketing, Online Growth, Optimization">
+    <meta name="description" content="Bot-It - Powerful Automation Tools for Businesses .">
+    <meta name="keywords" content="Automation tools, Business automation, Task automation, How automation can streamline business processes , Best online automation tools for businesses ">
     <meta name="author" content="Bot-It">
     
     <!-- Title -->
