--- a/services.html
+++ b/services.html
@@ -4,8 +4,8 @@
     <!-- Meta Tags for SEO -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore the services and pricing plans offered by Bot-It. We specialize in business automation, digital marketing, and web development.">
-    <meta name="keywords" content="services, Bot-It, business automation, pricing plans, digital marketing, web development">
+    <meta name="description" content="Explore flexible and affordable automation pricing plans with Bot It. Find the perfect plan for your business, from basic task automation to premium business solutions.">
+    <meta name="keywords" content="services, Bot-It, business automation, pricing plans, Affordable pricing for automation tools , Best value automation plans for businesses ">
     <meta name="author" content="Bot-It">
     
     <!-- Title -->
@@ -33,7 +33,7 @@
 
     <!-- Open Graph for Social Sharing -->
     <meta property="og:title" content="Our Services | Bot-It">
-    <meta property="og:description" content="Explore the range of services Bot-It offers to automate and optimize your business operations, from digital marketing to business solutions.">
+    <meta property="og:description" content="Explore flexible and affordable automation pricing plans with Bot It. Find the perfect plan for your business, from basic task automation to premium business solutions.">
     <meta property="og:image" content="assets/images/services-header.jpg">
     <meta property="og:url" content="http://yourwebsite.com/services.html">
     <meta property="og:type" content="website">
